# esp-hitachi

./: .envrc  Cargo.toml  banner.txt  ble_monitor.py  build.rs  connect_ble.py  connect_http.py  hitachictl.py  partitions.csv  sdkconfig.defaults  test.rhai
.cargo/: config.toml
hitachictl/: hitachictl.py  pyproject.toml  tui.py
hitachictl/rpc/: rpc.py  transports.py
src/: ble.rs  config.rs  http.rs  main.rs  rpc.rs  script.rs  wifi.rs
src/hal/: health.rs  hitachi_board.rs  ledc.rs  mod.rs  uart.rs  wand.rs
src/hal/husb238/: i2c.rs  mod.rs
src/handlers/: lovense.rs  mod.rs  rpc.rs
src/rhai_hal/: health.rs  ledc.rs  mod.rs  timer.rs  ws2812.rs
