[package]
name = "esp-hitachi"
version = "0.1.0"
authors = ["kore <emily@cat-girl.gay>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[patch.crates-io]
esp-idf-hal = { git = "https://github.com/kore-signet/esp-idf-hal" }

[[bin]]
name = "esp-hitachi"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
anyhow = "1.0.88"
embedded-svc = "0.28.0"
rhai = { version = "1.19.0", features = ["internals", "no_closure", "no_custom_syntax", "serde"] }
parking_lot = "0.12.3"
serde_json = { version = "1.0.128", default-features = false, features = ["alloc", "raw_value", "std"] }
serde = { version = "1.0.210", features = ["alloc", "derive", "std"], default-features = false }
esp32-nimble = "0.8.0"
crossbeam-channel = { version = "0.5.13", default-features = false, features = ["std"] }

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/mdns", version = "1.2" }

[build-dependencies]
embuild = "0.32.0"
